2010-03-25  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationInvokerHandler.cs : removed unused code.

2010-03-24  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : return EndpointDispatcher at initializing
	  for internal use. Add some locks. Patch by Matt Dargavel.

2010-03-24  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : fix wrong method call in open_delegate.
	  Patch by Matt Dargavel.

2010-03-24  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : give the actual exception message instead
	  of "error occured".

2010-03-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathMessageContext.cs : implement.
	* XPathMessageFilterTable.cs : add some missing overloads.

2010-02-26  Atsushi Enomoto  <atsushi@ximian.com>

	* InputOrReplyRequestProcessor.cs : now ServiceRuntimeChannel is
	  moved to fake public namespace.

2010-02-18  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : revert previous change - it could result
	  in blocking some threads and block nunit completion.

2010-02-04  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : now I can enable service throttling to
	  handle more than one concurrent channels as ASP.NET reply channel
	  got fixed.

2010-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : actually instance context provider could be
	  null through the entire service run.

	  Fixed all current nunit failures!

2010-01-22  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : do not try to iterate channel acceptor when
	  it is being closed.

2010-01-19  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : another error audit.

2010-01-13  Atsushi Enomoto  <atsushi@ximian.com>

	* FaultContractInfo.cs : implement.
	* DispatchOperation.cs, ClientOperation.cs: fill Faults.

2010-01-08  Atsushi Enomoto  <atsushi@ximian.com>

	* EndpointDispatcher.cs, InputOrReplyRequestProcessor.cs :