@@ -1,3 +1,8 @@
+2010-03-30  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ChannelDispatcher.cs : for faults, use fault namespace, not that of
+	  ReplyAction. Added FIXME comment regarding dispatcher.
+
 2010-03-25  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* OperationInvokerHandler.cs : removed unused code.
